fixed how home page aligns based on window height.

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 html, body {
 	height: 100%;
 	width: 100%;
+	font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 body {
@@ -116,16 +117,15 @@ body {
 	Code for Home segment.
 */
 
-#home .title {
-	text-align: center;
+.title {
+	/*padding-top: 20px;*/
 	padding-bottom: 10px;
+	margin-bottom: 40px;
 }
 
 .home-img-div {
-	height: 210px;
-	width: 215px;
+	z-index: 2000;
 	float: right;
-	padding: 0 0 10px 15px;
 }
 
 .self-img {
@@ -133,13 +133,30 @@ body {
 	display: block;
 	border: 1px solid #000000;
 	border-radius: 50%;
-	height: 200px;
-	width: 200px;
+	height: 100px;
+	width: 100px;
+	-webkit-box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, 1);
+    -moz-box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, 1);
+	box-shadow: 2px 2px 5px 0 rgba(0,0,0,1);
 }
 
 .home-section {
 	height: 80%;
-	margin-bottom: 50px;
+	margin: 20px 30px 50px 30px;
+}
+
+.home-body {
+	/*padding-top: 30px;*/
+	height: 60%;
+	width: 100%;
+	
+}
+
+.about, .doing, .afraid {
+	padding-bottom: 10px;
+}
+.about p, .doing p, .afraid p {
+	padding-left: 20px;
 }
 
 .home-bottom {
